force-app/main/default/objects/IT_Support_Request__c/IT_Support_Request__c.object-meta.xml
<CustomObject>
    <label>IT Support Request</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>IT Support Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>