force-app/main/default/objects/IT_Support_Request__c/fields/Chargeable__c.field-meta.xml
<CustomField>
    <fullName>Chargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chargeable</label>
    <type>Checkbox</type>
</CustomField>