force-app/main/default/objects/IT_Support_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IT Support Requests</relationshipLabel>
    <relationshipName>IT_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>