force-app/main/default/objects/IT_Support_Request__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>